--- a/coding_interview/employee_dbms/src/styles.css
+++ b/coding_interview/employee_dbms/src/styles.css
@@ -56,3 +56,46 @@ body {
   border-bottom: 1px solid black;
 }
 /* Initial CSS - END */
+
+/* Render all Employees - START */
+.employees__names--list {
+  display: flex;
+  flex-direction: column;
+}
+.employees__names--item {
+  cursor: pointer;
+  padding: 10px 15px;
+  margin-bottom: 5px;
+  text-align: center;
+  background-color: var(--item-bg);
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.employees__names--item:hover,
+.selected {
+  background-color: var(--btn);
+}
+/* Render all Employees - END */
+
+/* Render Single Employee - START */
+.employees__single--heading {
+  text-align: center;
+  font-size: 25px;
+  text-transform: uppercase;
+  padding: 5px;
+}
+.employees__single--info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+.employees__single--info > img {
+  width: 250px;
+  height: 250px;
+  object-fit: contain;
+  border-radius: 50%;
+}
+/* Render Single Employee - END */
